[package]
name = "chainsaw"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
zbus = { version = "5.12.0", features = ["tokio"] }
clap = { version = "4.5.51", features = ["derive"] }
[[bin]]
name = "chainsawd"
path = "src/bin/daemon.rs"

[[bin]]
name = "chainsaw"
path = "src/bin/cli.rs"